# burn-tuningfork-pinn

./: .gitignore  Cargo.toml  README.md  augment_data.py  diagnose_physics.py  package-lock.json
data/: fem_data.csv  fem_data.json  fem_data_augmented.csv  summary_parameters.csv  summary_parameters.csv100  summary_parameters.csv500
src/: constants.rs  dataset.rs  infer.rs  main.rs  model.rs  physics.rs  train.rs
